# b56

./: CHANGELOG  LICENSE  README.md  Readme.md  b56.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-8.10.7/: b56-0.1.1-inplace.conf  package.cache
src/: B10.hs
src/B10/: Convert.hs  Test.hs
