cabal-version:      2.4
name:               b56
version:            0.1.1
synopsis:
    Base56 to Base(x) Encoder and Decoder useful for concise but very large sequences that are more human readable than GUID (and don't contain eye, oh, and el characters which may be misread).

-- A longer description of the package.
-- description:
homepage:           http://github.com/nullvalues/b56.git

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             David Jacobsen
maintainer:         nullvalues@gmail.com

-- A copyright notice.
-- copyright:
category:           Data
extra-source-files: CHANGELOG.old

library
    exposed-modules:
        B10
        B10.Test
        B10.Convert

    build-depends:
        base ^>=4.14.3.0,
        integer-gmp ^>=1.0.3.0

    hs-source-dirs:   src
    default-language: Haskell2010
